--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>vital-data-rescue</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Shlomi's Blog</title>
+    <meta name="description" content="My personal portfolio" />
+    <meta name="author" content="Shlomi Domnenko" />
     <meta property="og:image" content="/og-image.png" />
   </head>
 
