--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shlomi's Blog</title>
+    <title>Shlomi's Personal Portfolio</title>
     <meta name="description" content="My personal portfolio" />
     <meta name="author" content="Shlomi Domnenko" />
     <meta property="og:image" content="/og-image.png" />
